--- a/styles/architect.css
+++ b/styles/architect.css
@@ -4,3 +4,70 @@
 * {
     font-family: 'Work Sans', sans-serif;
 }
+
+/* Shared styles */
+
+.btn_primary {
+    width: 180px;
+    height: 64px;
+    background-color: #FF900E;
+    font-weight: 600;
+    color: #FFFFFF;
+    font-size: 20px;
+}
+
+/* header styles */
+
+header {
+    background: rgba(255, 144, 14, 0.10);
+    padding: 50px 240px;
+}
+
+/* nav related styles */
+
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav_title {
+    color: #131313;
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+nav>ul {
+    display: flex;
+}
+
+nav li {
+    list-style: none;
+    margin-right: 50px;
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+nav li a {
+    text-decoration: none;
+    color: #424242;
+}
+
+/* banner related styles */
+
+.banner_content {
+    max-width: 800px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.banner_title {
+    color: #131313;
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.banner_description {
+    color: #727272;
+    font-weight: 400;
+}
