--- a/styles/architect.css
+++ b/styles/architect.css
@@ -125,6 +125,36 @@ main {
     font-weight: 700;
 }
 
+/* Facts related styles */
+
+.facts_card_container {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 100px;
+}
+
+.card {
+    border-radius: 8px;
+    border: 1px solid #FF900E;
+    text-align: center;
+    padding: 40px 30px;
+}
+
+.card_srats {
+    color: #424242;
+    font-size: 3rem;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+
+.card_title {
+    color: #727272;
+    font-size: 1.25rem;
+    font-weight: 600;
+    margin-top: 2px;
+}
+
 /* Responsive media queries */
 
 /* Mobile devices */
