added sponsor section

--- a/styles/architect.css
+++ b/styles/architect.css
@@ -155,6 +155,25 @@ main {
     margin-top: 2px;
 }
 
+/* Sponsors related styles */
+
+.sponsor_container {
+    text-align: center;
+}
+
+.sponsors_images_container {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    gap: 40px;
+    align-items: center;
+}
+
+.sponsors_images_container img {
+    width: 165px;
+    /* height: 50px; */
+}
+
 /* Responsive media queries */
 
 /* Mobile devices */
@@ -165,7 +184,9 @@ main {
     }
 
     nav,
-    .teams_container {
+    .teams_container,
+    .facts_card_container,
+    .sponsors_images_container {
         flex-direction: column;
     }
 
@@ -173,9 +194,14 @@ main {
         grid-template-columns: 1fr;
     }
 
-    .teams_content {
+    .teams_content,
+    .facts_card_container {
         padding-left: 20px;
         padding-right: 20px;
+    }
+
+    .facts_card_container {
+        gap: 20px;
     }
 
 }
@@ -189,7 +215,8 @@ main {
     }
 
     nav,
-    .teams_container {
+    .teams_container,
+    .sponsors_images_container {
         flex-direction: column;
     }
 
