added features section

--- a/styles/architect.css
+++ b/styles/architect.css
@@ -19,16 +19,16 @@
     cursor: pointer;
 }
 
-.primary_description {
-    color: #727272;
-    font-size: 1rem;
-    font-weight: 400;
-}
-
 .primary_title {
     color: #131313;
     font-size: 3rem;
     font-weight: 700;
+}
+
+.primary_description {
+    color: #727272;
+    font-size: 1rem;
+    font-weight: 400;
 }
 
 /* header styles */
@@ -122,6 +122,41 @@ main {
 
 .text_features {
     color: #FF900E;
+    font-weight: 700;
+}
+
+/* Features related styles */
+
+.features_container {
+    display: flex;
+    margin-top: 130px;
+    gap: 100px;
+}
+
+#features_title {
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.features_content .features_card {
+    border-radius: 8px;
+    padding: 30px;
+    background: #FFFFFF;
+    margin-bottom: 20px;
+    box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.ten_years_badge {
+    border-radius: 8px;
+    background: #FF900E;
+    color: #FFFFFF;
+    width: 342px;
+    height: 200px;
+    padding: 40px;
+}
+
+.ten_years_badge h2{
+    font-size: 4rem;
     font-weight: 700;
 }
 
