--- a/styles/architect.css
+++ b/styles/architect.css
@@ -146,6 +146,11 @@ main {
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
 
+.fretures_image img {
+    height: 80%;
+    margin-left: 70px;
+}
+
 .ten_years_badge {
     border-radius: 8px;
     background: #FF900E;
@@ -153,11 +158,21 @@ main {
     width: 342px;
     height: 200px;
     padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 120px;
+    right: 30px;
 }
 
-.ten_years_badge h2{
+.ten_years_badge h2 {
     font-size: 4rem;
     font-weight: 700;
+    margin: 20px 0 0 0;
+}
+
+.ten_years_badge p {
+    font-size: 1.5rem;
+    font-weight: 500;
 }
 
 /* Facts related styles */
@@ -221,7 +236,8 @@ main {
     nav,
     .teams_container,
     .facts_card_container,
-    .sponsors_images_container {
+    .sponsors_images_container,
+    .features_container {
         flex-direction: column;
     }
 
@@ -233,6 +249,16 @@ main {
     .facts_card_container {
         padding-left: 20px;
         padding-right: 20px;
+    }
+
+    .fretures_image img {
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .ten_years_badge {
+        position: static;
+        max-width: 250px;
     }
 
     .facts_card_container {
@@ -251,7 +277,8 @@ main {
 
     nav,
     .teams_container,
-    .sponsors_images_container {
+    .sponsors_images_container,
+    .features_container {
         flex-direction: column;
     }
 
