--- a/styles/architect.css
+++ b/styles/architect.css
@@ -146,7 +146,7 @@ main {
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
 }
 
-.fretures_image img {
+.features_image img {
     height: 80%;
     margin-left: 70px;
 }
@@ -221,7 +221,27 @@ main {
 
 .sponsors_images_container img {
     width: 165px;
-    /* height: 50px; */
+}
+
+/* Footer related styles */
+
+footer {
+    max-width: 1440px;
+    margin: 70px auto;
+}
+
+.footer_container {
+    height: 100px;
+    background-color: #FFF4E7;
+    text-align: center;
+    border-radius: 8px;
+}
+
+.footer_container p {
+    color: #424242;
+    font-size: 1.25rem;
+    font-weight: 400;
+    padding-top: 25px;
 }
 
 /* Responsive media queries */
@@ -251,7 +271,7 @@ main {
         padding-right: 20px;
     }
 
-    .fretures_image img {
+    .features_image img {
         width: 90%;
         margin-left: 0;
     }
